--- a/package.json
+++ b/package.json
@@ -11,21 +11,27 @@
     "typecheck": "tsc --noEmit",
     "docs": "typedoc"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "next": "16.0.6",
+    "prisma": "^5.22.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.19.25",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "16.0.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.28.13",
-    "typescript": "^5.1.0"
+    "typescript": "^5.9.3"
   }
 }
