--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "stripe": "^20.0.0",
+    "vercel": "^49.1.2",
     "zod": "^4.1.13"
   },
   "devDependencies": {
