chore: remove SQLite DATABASE_URL from example env

--- a/.env.example
+++ b/.env.example
@@ -36,4 +36,4 @@ CAL_API_KEY=__CAL_API_KEY__
 ###############################################################################
 # No env vars needed — Prisma uses file:./dev.db directly.
 # Added here only for possible future switches to Postgres/MySQL.
-DATABASE_URL=file:./dev.db
+DATABASE_URL=
